src/objects/HistoryUserKeyGenerated__c.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HistoryUserKeyGenerateds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>deploymentData__c</fullName>
        <label>deploymentData</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>publicKey__c</fullName>
        <label>publicKey</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>HistoryUserKeyGenerated</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HistoryUserKeyGenerated Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HistoryUserKeyGenerateds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>